--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Project</title>
+</head>
+<body>
+    <h1>This is a heading 1</h1>
+</body>
+</html>
