--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Project</title>
+    <link rel="Stylesheet" type="text/css" href="style.css">
+    <title>DELLHOAK</title>
 </head>
 <body>
-    <h1>This is a heading 1</h1>
+    <div class="BackImg">
+        <div class="ProfileCard">
+            <img src="profilepic.jpg">
+            <div class="ProfileText">
+                <h1>DELLHOAK</h1>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
