--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" type="text/css" href="style.css">
+    <link rel="Stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
     <title>DELLHOAK</title>
 </head>
 <body>
@@ -11,6 +13,12 @@
             <img src="profilepic.jpg">
             <div class="ProfileText">
                 <h1>DELLHOAK</h1>
+            </div>
+            <div class="ProfileFonts">
+                <a href="https://www.instagram.com/imaliasgar0/"><i class="fa fa-instagram fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/aliasgar-husain-7a3510158"><i class="fa fa-linkedin-square fa-2x"></i></i></a>
+                <a href="https://github.com/Dellhoak"><i class="fa fa-github fa-2x"></i></i></a>
+                <a href="mailto:Dellhoakuser@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></i></a>
             </div>
         </div>
     </div>
