--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="Stylesheet" type="text/css" href="style.css">
     <link rel="Stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-8341489867883063",
+        enable_page_level_ads: true
+      });
+    </script>
     <title>DELLHOAK</title>
 </head>
 <body>
