--- a/main.html
+++ b/main.html
@@ -2,22 +2,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" type="text/css" href="style.css">
+    <link rel="Stylesheet" type="text/css" href="main.css">
     <link rel="Stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="Stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
-    <title>DELLHOAK</title>
+    <title>WELCOME</title>
 </head>
-<body background="back2.jpg">
+<body class="BackImg">
     <nav class="navbar navbar-expand-sm navbar-custom">
-        <a class="navbar-brand" href="index.html">PROFILE</a>
+        <a class="navbar-brand" href="main.html">WORK</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="main.html">Work</a>
+              <a class="nav-link" href="index.html">Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -25,18 +25,9 @@
           </ul>
         </div>
     </nav>
-    <div class="BackImg">
-        <div class="ProfileCard">
-            <img src="propic.jpeg">
-            <div class="ProfileText">
-                <h1>Aliasgar Husain</h1>
-            </div>
-            <div class="ProfileFonts">
-                <a href="https://www.instagram.com/imaliasgar0/"><i class="fa fa-instagram fa-2x"></i></a>
-                <a href="https://www.linkedin.com/in/aliasgar-husain-7a3510158"><i class="fa fa-linkedin-square fa-2x"></i></i></a>
-                <a href="https://github.com/Dellhoak"><i class="fa fa-github fa-2x"></i></i></a>
-                <a href="mailto:Dellhoakuser@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></i></a>
-            </div>
+    <div class="body">
+        <div class="heading">
+            <h1>My Work</h1>
         </div>
     </div>
 </body>
