--- a/work.html
+++ b/work.html
@@ -7,8 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
     <title>DELLHOAK</title>
 </head>
-<body background="back2.jpg">
-
+<body>
   <nav>
     <div class="logo">
       <h4>Aliasgar Husain</h4>
@@ -25,21 +24,6 @@
       <div class="line3"></div>
     </div>
   </nav>
-    
-    <div class="BackImg">
-        <div class="ProfileCard">
-            <img src="propic.jpeg">
-            <div class="ProfileText">
-                <h1>Aliasgar Husain</h1>
-            </div>
-            <div class="ProfileFonts">
-                <a href="https://www.instagram.com/imaliasgar0/"><i class="fa fa-instagram fa-2x"></i></a>
-                <a href="https://www.linkedin.com/in/aliasgar-husain-7a3510158"><i class="fa fa-linkedin-square fa-2x"></i></i></a>
-                <a href="https://github.com/Dellhoak"><i class="fa fa-github fa-2x"></i></i></a>
-                <a href="mailto:Dellhoakuser@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></i></a>
-            </div>
-        </div>
-    </div>
 
   <script src="main.js"></script>
 </body>
