--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
     <title>DELLHOAK</title>
 </head>
-<body background="back2.jpg">
-
-  <nav>
-    <div class="logo">
-      <h4>Aliasgar Husain</h4>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="contact.html">contact</a></li>
-      <li><a href="work.html">wORK</a></li>
-      <li><a href="#">aBOt</a></li>
-    </ul>
-    <div class="burger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-  </nav>
-    
-    <div class="BackImg">
+<body>
+  <div class="page">
+    <nav>
+      <div class="logo">
+        <h4>Aliasgar Husain</h4>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="contact.html">contact</a></li>
+        <li><a href="work.html">wORK</a></li>
+        <li><a href="#">aBOt</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+      
+    <div class="bodydown">
         <div class="ProfileCard">
             <img src="propic.jpeg">
             <div class="ProfileText">
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
