--- a/work.html
+++ b/work.html
@@ -8,22 +8,24 @@
     <title>DELLHOAK</title>
 </head>
 <body>
-  <nav>
-    <div class="logo">
-      <h4>Aliasgar Husain</h4>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="contact.html">contact</a></li>
-      <li><a href="work.html">wORK</a></li>
-      <li><a href="#">aBOt</a></li>
-    </ul>
-    <div class="burger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-  </nav>
+  <div class="page">
+    <nav>
+      <div class="logo">
+        <h4>Aliasgar Husain</h4>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">contact</a></li>
+        <li><a href="#">wORK</a></li>
+        <li><a href="#">aBOt</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+  </div>
 
   <script src="main.js"></script>
 </body>
