--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="Stylesheet" type="text/css" href="style.css">
     <link rel="Stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <title>DELLHOAK</title>
 </head>
 <body>
@@ -16,9 +17,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="contact.html">contact</a></li>
-        <li><a href="work.html">wORK</a></li>
-        <li><a href="#">aBOt</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="#">About</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
