--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0', shrink-to-fit=no">
-    <link rel="Stylesheet" type="text/css" href="style.css">
+    <link rel="Stylesheet" type="text/css" href="work.css">
     <link rel="Stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
     <title>DELLHOAK</title>
@@ -16,9 +16,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">contact</a></li>
-        <li><a href="#">wORK</a></li>
-        <li><a href="#">aBOt</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">About</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
