--- a/work.html
+++ b/work.html
@@ -9,8 +9,24 @@
     <title>DELLHOAK</title>
 </head>
 <body>
+  <nav>
+    <div class="logo">
+      <h4>Aliasgar Husain</h4>
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#">Work</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+  </nav>
   <div class="page">
-    <nav>
+    <!-- <nav>
       <div class="logo">
         <h4>Aliasgar Husain</h4>
       </div>
@@ -25,7 +41,7 @@
         <div class="line2"></div>
         <div class="line3"></div>
       </div>
-    </nav>
+    </nav> -->
   </div>
 
   <script src="main.js"></script>
