--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
     <title>DELLHOAK</title>
 </head>
 <body>
+    
     <div class="page">
+
         <nav>
             <div class="logo">
             <h4>Aliasgar Husain</h4>
@@ -26,28 +28,31 @@
             <div class="line3"></div>
             </div>
         </nav>
-        <div class="container">
-            <form action="webform.php" method="POST" class="form">
-                <div class="form-group">
-                    <label for="name" class="form-label">Your Name</label>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" tabindex="1" required>
-                </div>
-                <div class="form-group">
-                    <label for="email" class="form-label">Your Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="E-mail" tabindex="2" required>
-                </div>
-                <div class="form-group">
-                    <label for="subject" class="form-label">Subject</label>
-                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3" required>
-                </div>
-                <div class="form-group">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" rows="5" cols="50" id="message" name="message" placeholder="Enter Message..." tabindex="4"></textarea>
-                </div>
-                <div>
-                    <button type="submit" class="btn">Send Message!</button>
-                </div>
-            </form>
+
+        <div class="bodydown">
+            <div class="container">
+                <form action="webform.php" method="POST" class="form">
+                    <div class="form-group">
+                        <label for="name" class="form-label">Your Name</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Name" tabindex="1" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="form-label">Your Email</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="E-mail" tabindex="2" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" rows="5" cols="50" id="message" name="message" placeholder="Enter Message..." tabindex="4"></textarea>
+                    </div>
+                    <div>
+                        <button type="submit" class="btn">Send Message!</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
   <script src="main.js"></script>
